<resources>
    <string name="app_name">Notification Tracker</string>

    <string name="no_notification_yet">There aren\'t notifications yet!</string>
    <string name="start_button">start</string>
    <string name="stop_button">stop</string>

    <string name="all_title">All</string>
    <string name="per_hour">Last hour</string>
    <string name="per_day">Last day</string>
    <string name="per_month">Last month</string>

    <string name="notification_listener_service">Notification listener service</string>
    <string name="notification_listener_service_explanation">The application will record all incoming notifications and their removal from the curtain. To start tracking notifications, do you need to give permission, to continue?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="was_added">Was added in:</string>
    <string name="was_removed">Was removed in:</string>
    <string name="notify_id">Notify id = %s</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="forgot">Forgot?</string>
    <string name="pick_a_pin">Pick a PIN code</string>
    <string name="repeat_input">Repeat input</string>
    <string name="input_pin_code">Input PIN code</string>
    <string name="bad_input_repeat_input">Bad input, please repeat input</string>

    <string name="reset_pin_text">Do you want to reset the PIN code? Caution, this will clear all application data. Do you want to reset the PIN code?</string>
    <string name="manual_reset_pin_text">Want to reset your PIN? Caution, this will clear all application data. To do this, you need to go into the application settings -> storage and cash and execute: clear Storage. Continue? </string>
    <string name="cancel_button">Cancel</string>
    <string name="reset_pin_button">Reset PIN</string>

    <string name="privacy_policy_item">Privacy policy</string>
    <string name="privacy_policy_text">Notification Tracker - does not collect any personal data, any data obtained while the application is running is stored in an encrypted database with a key based on your PIN-code and cannot be get by us. Contact us: if you have any questions about this Privacy Policy or different questions contact us: sosov.valeriy@gmail.com</string>
    <string name="contact_us_item">Contact us</string>
    <string name="change_pin_item">Change PIN</string>

    <string name="no_notification_message">(No message)</string>

    <!-- SettingsFragment -->
    <string name="is_show_removed">Hide entries when notice deleted from the curtain</string>
    <string name="settings_title">Settings</string>
    <string name="save_button">Save</string>
    <string name="changes_was_saved">Changes saved</string>
    <string name="ignore_packages_title">Not show applications in list</string>
    <string name="enabled_package_filter_title">Enabled by application filter</string>
</resources>
