<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/radio_button_group"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/menuAllTime"
            android:checked="true"
            android:title="@string/all_title"
            app:actionViewClass="android.widget.RadioButton" />
        <item
            android:id="@+id/menuPerHour"
            android:title="@string/per_hour"
            app:actionViewClass="android.widget.RadioButton" />
        <item
            android:id="@+id/menuPerDay"
            android:title="@string/per_day"
            app:actionViewClass="android.widget.RadioButton" />
        <item
            android:id="@+id/menuPerMonth"
            android:title="@string/per_month"
            app:actionViewClass="android.widget.RadioButton" />
    </group>
</menu>